--- a/index.html
+++ b/index.html
@@ -16,26 +16,13 @@
 
 
 
-    <div id="container"></div>
+    <div id="scene-container"></div>
 
 </body>
 
 <footer>
     footer
 </footer>
-
-<!-- three.min.js r102 -->
-<script
-    src="https://rawcdn.githack.com/mrdoob/three.js/d9f87fb1a2c5db1ea0e2feda9bd42b39b5bedc41/build/three.min.js"></script>
-<!-- OrbitControls.js -->
-<script
-    src="https://rawcdn.githack.com/mrdoob/three.js/d9f87fb1a2c5db1ea0e2feda9bd42b39b5bedc41/examples/js/controls/OrbitControls.js"></script>
-<!-- DRACOLoader.js -->
-<script
-    src="https://rawcdn.githack.com/mrdoob/three.js/d9f87fb1a2c5db1ea0e2feda9bd42b39b5bedc41/examples/js/loaders/DRACOLoader.js"></script>
-<!-- GLTFLoader.js -->
-<script
-    src="https://rawcdn.githack.com/mrdoob/three.js/d9f87fb1a2c5db1ea0e2feda9bd42b39b5bedc41/examples/js/loaders/GLTFLoader.js"></script>
 
 <!-- Title 3D -->
 <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
@@ -44,6 +31,6 @@
     $('#text').lettering()
 </script>
 
-<script src="js/main.js"></script>
+<script type="module" src="js/main.js"></script>
 
 </html>
