--- a/index.html
+++ b/index.html
@@ -4,33 +4,94 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/main.css" />
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/main.css" rel="stylesheet">
+    <!-- <script src="js/jquery.min.js"></script> -->
+
     <title>Netflix 3D Quiz</title>
 </head>
 
 <body>
-    <div id="text">
-        3D cinema quiz
+    <!-- Title -->
+    <div class="container-fluid">
+	<div class="row">
+		<div class="col-md-12">
+            <div id="text">
+                3D cinema quiz
+            </div>
+            <a href="https://twitter.com/enric_moreu" target="_blank">by @enric_moreu</a>
+        
+		</div>
     </div>
-    <a href="https://twitter.com/enric_moreu" target="_blank">by @enric_moreu</a>
+    
+    <!-- 3D -->
+    <div class="row">
+        <div class="col-md-1">
+        </div>
+        <div class="col-md-10">
+            <h2>1. Film from 2019</h2>
+        </div>
+        <div class="col-md-1">
+        </div>
+    </div>
+
+    <!-- Counter + hint -->
+     <div class="row">
+		<div class="col-md-1">
+		</div>
+		<div class="col-md-10">
+            <div class="col-centered" id="scene-container"></div>
+		</div>
+		<div class="col-md-1">
+		</div>
+    </div>
+
+    <!-- Input -->
+	<div class="row">
+		<div class="col-md-1">
+		</div>
+		<div class="col-md-10">
+            <form id="answer-input">
+                Answer: <input type="text" name="fname"><br>
+                <input type="button" onclick="myFunction()" value="Submit">
+              </form>
+              <script>
+                function myFunction() {
+                  alert('not quite');
+                }
+                </script>
+		</div>
+		<div class="col-md-1">
+		</div>
+	</div>
+	<!-- <div class="row">
+		<div class="col-md-12">
+            footer here
+		</div>
+	</div> -->
+</div>
+
+   
+  </body>
 
 
 
-    <div id="scene-container"></div>
-
-</body>
-
-<footer>
-    footer
-</footer>
 
 <!-- Title 3D -->
-<script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+<script src="https://npmcdn.com/tether@1.2.4/dist/js/tether.min.js"></script>
+
+<script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js'></script>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/lettering.js/0.6.1/jquery.lettering.min.js'></script>
 <script>
     $('#text').lettering()
 </script>
 
+<!-- Bootstrap -->
+<script src="js/jquery.min.js"></script>
+<script src="js/bootstrap.min.js"></script>
+<script src="js/scripts.js"></script>
+
+<!-- Three JS -->
 <script type="module" src="js/main.js"></script>
 
 </html>
