--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <div class="col-md-1">
             </div>
             <div class="col-md-10">
-                <h2>1. Film from 2019</h2>
+                <div id="hint">1. Film from 1997</div>
             </div>
             <div class="col-md-1">
             </div>
@@ -56,13 +56,9 @@
             <div class="col-md-10">
                 <form id="answer-input">
                     Answer: <input type="text" name="fname"><br>
-                    <input type="button" onclick="myFunction()" value="Submit">
+                    <input id="submit" type="button" value="Submit">
                 </form>
-                <script>
-                    function myFunction() {
-                        alert('not quite');
-                    }
-                </script>
+                
             </div>
             <div class="col-md-1">
             </div>
@@ -90,7 +86,7 @@
 </script>
 
 <!-- Bootstrap -->
-<script src="js/jquery.min.js"></script>
+<!-- <script src="js/jquery.min.js"></script> -->
 <script src="js/bootstrap.min.js"></script>
 <script src="js/scripts.js"></script>
 
