Spinner model + style button

--- a/index.html
+++ b/index.html
@@ -27,7 +27,18 @@
             </div>
         </div>
 
-        <!-- 3D -->
+        <!-- Description -->
+        <div class="row">
+            <div class="col-md-1">
+            </div>
+            <div class="col-md-10">
+                <h2>Guess the title of the film</h2>
+            </div>
+            <div class="col-md-1">
+            </div>
+        </div>
+
+        <!-- Counter + hint -->
         <div class="row">
             <div class="col-md-1">
             </div>
@@ -38,7 +49,7 @@
             </div>
         </div>
 
-        <!-- Counter + hint -->
+        <!-- 3D -->
         <div class="row">
             <div class="col-md-1">
             </div>
@@ -55,8 +66,8 @@
             </div>
             <div class="col-md-10">
                 <form id="answer-input">
-                    Answer: <input type="text" name="fname"><br>
-                    <input id="submit" type="button" value="Submit">
+                    <input id="submit-text" type="text" placeholder="E.g. Titanic"><br>
+                    <input id="submit-button" type="button" value="Submit">
                 </form>
                 
             </div>
