Arrow tip swipe

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <link rel="icon"
         href="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/240/apple/285/movie-camera_1f3a5.png" />
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Fredoka+One&family=Lilita+One&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Fredoka+One&family=Indie+Flower&family=Lilita+One&display=swap"
+        rel="stylesheet">
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/main.css" rel="stylesheet">
 
@@ -71,6 +72,18 @@
             </div>
             <div class="col-md-10">
                 <div class="col-centered" id="scene-container"></div>
+                <div id='tip'>
+                    swipe to rotate
+                    <svg xmlns="http://www.w3.org/2000/svg" width="85" height="40">
+                        <g fill="none" stroke="#000" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"
+                            stroke-miterlimit="10">
+                            <path
+                                d="M1.618 31.629c24.42.542 48.628 3.428 72.932 5.633.346-9.751.688-19.321 2.068-28.967" />
+                            <path
+                                d="M69.854 12.22c3.721-2.325 4.348-6.603 7.402-9.481 1.046 3.027 3.443 9.07 6.125 11.113" />
+                        </g>
+                    </svg>
+                </div>
             </div>
             <div class="col-md-1">
             </div>
