--- a/index.html
+++ b/index.html
@@ -127,17 +127,17 @@
             <div class="col-md-1">
             </div>
         </div>
-        <!-- <div class="row">
-		<div class="col-md-12">
-            footer here
-		</div>
-	</div> -->
     </div>
 
 
 </body>
 
-
+<!-- Hit counter -->
+<script>
+    function cb(response) {
+    }
+</script>
+<script async src="https://api.countapi.xyz/hit/3dfilms.enricmor.eu/visits?callback=cb"></script>
 
 
 <!-- Title 3D -->
