Feedback message styling

--- a/index.html
+++ b/index.html
@@ -110,13 +110,23 @@
             </div>
         </div>
 
+        <!-- Feedback -->
+        <div class="row">
+            <div class="col-md-4">
+            </div>
+            <div class="col-md-4">
+                <div id='feedback'>Oops, try again!</div>
+            </div>
+            <div class="col-md-4">
+            </div>
+        </div>
+    </div>
 
         <!-- Input -->
         <div class="row">
             <div class="col-md-1">
             </div>
             <div class="col-md-10">
-                <div id='feedback'>Oops, try again!</div>
                 <form id="answer-input">
                     <input id="submit-text" onkeydown="return event.key != 'Enter';" type="text"
                         placeholder="E.g. Titanic" class="btn btn-secondary"><br>
