--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="theme-color" content="#323238">
     <link rel="icon"
         href="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/240/apple/285/movie-camera_1f3a5.png" />
     <link rel="preconnect" href="https://fonts.gstatic.com">
