--- a/index.html
+++ b/index.html
@@ -55,7 +55,6 @@
         </div>
 
         <!-- Subtitle -->
-        <div class="container-fluid">
             <div class="row">
                 <div class="col-md-12">
                     <div id="subtitle">
@@ -68,10 +67,12 @@
             <div class="row">
                 <div class="col-md-1">
                 </div>
-                <div id="quiz">
-
-                    <div class="col-md-10">
+                
+                <div class="col-md-10">
+                    <div id="quiz">
+                        <div class="animated-box in">
                         <div id="hint">1. Film from 2010</div>
+                    </div>
                     </div>
                 </div>
                 <div class="col-md-1">
