--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 <div class="row">
                     <div class="col-md-12">
                         <div id="subtitle">
-                            <h3>Guess the movie name!</h3>
+                            <h3>Guess the title of 12 famous movies</h3>
                         </div>
                     </div>
                 </div>
@@ -73,7 +73,7 @@
                     <div class="col-md-10">
                         <div id="quiz">
                             <div class="animated-box in">
-                                <div id="hint">1. Film from 2010</div>
+                                <div id="hint">1. Movie from 2010</div>
                             </div>
                         </div>
                     </div>
