--- a/congrats.html
+++ b/congrats.html
@@ -50,7 +50,7 @@
                     <div class="col-md-12">
                         <div class="wrapper" id="title-h1">
                             <div class="container">
-                                <h1>3D <br>Movie <br>Quiz</h1>
+                                <h1>Well done!</h1>
                             </div>
                         </div>
                     </div>
@@ -60,98 +60,40 @@
                 <div class="row">
                     <div class="col-md-12">
                         <div id="subtitle">
-                            <h3>Guess the title of 12 famous movies</h3>
+                            <h3>Did you enjoy it?</h3>
+                            <h4>Share it with your firends!</h4>
                         </div>
                     </div>
                 </div>
 
-                <!-- Counter + hint -->
+                <!-- Share -->
                 <div class="row">
-                    <div class="col-md-1">
-                    </div>
-
-                    <div class="col-md-10">
-                        <div id="quiz">
-                            <div class="animated-box in">
-                                <div id="hint">1. Movie from 2010</div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-1">
-                    </div>
-                </div>
-
-                <!-- 3D -->
-                <div class="row">
-                    <div class="col-md-1">
-                    </div>
-
-                    <div class="col-md-10">
-                        <div id="canvas3d">
-                            <div class="col-centered" id="scene-container"></div>
-                        </div>
-                        <div id='tip'>
-                            swipe to rotate
-                            <svg xmlns="http://www.w3.org/2000/svg" width="85" height="40">
-                                <g fill="none" stroke="white" stroke-width="1.5" stroke-linecap="round"
-                                    stroke-linejoin="round" stroke-miterlimit="10">
+                    <div class="col-md-12">
+                        <div class="share">
+                            <!--  -->
+                            <a
+                                href="whatsapp://send?text=🎬🍿🎥Can you guess the title of 12 famous movies? https://3dfilms.enricmor.eu">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" fill="#F8FFE5"
+                                    class="bi bi-whatsapp" viewBox="0 0 16 16">
                                     <path
-                                        d="M1.618 31.629c24.42.542 48.628 3.428 72.932 5.633.346-9.751.688-19.321 2.068-28.967" />
+                                        d="M13.601 2.326A7.854 7.854 0 0 0 7.994 0C3.627 0 .068 3.558.064 7.926c0 1.399.366 2.76 1.057 3.965L0 16l4.204-1.102a7.933 7.933 0 0 0 3.79.965h.004c4.368 0 7.926-3.558 7.93-7.93A7.898 7.898 0 0 0 13.6 2.326zM7.994 14.521a6.573 6.573 0 0 1-3.356-.92l-.24-.144-2.494.654.666-2.433-.156-.251a6.56 6.56 0 0 1-1.007-3.505c0-3.626 2.957-6.584 6.591-6.584a6.56 6.56 0 0 1 4.66 1.931 6.557 6.557 0 0 1 1.928 4.66c-.004 3.639-2.961 6.592-6.592 6.592zm3.615-4.934c-.197-.099-1.17-.578-1.353-.646-.182-.065-.315-.099-.445.099-.133.197-.513.646-.627.775-.114.133-.232.148-.43.05-.197-.1-.836-.308-1.592-.985-.59-.525-.985-1.175-1.103-1.372-.114-.198-.011-.304.088-.403.087-.088.197-.232.296-.346.1-.114.133-.198.198-.33.065-.134.034-.248-.015-.347-.05-.099-.445-1.076-.612-1.47-.16-.389-.323-.335-.445-.34-.114-.007-.247-.007-.38-.007a.729.729 0 0 0-.529.247c-.182.198-.691.677-.691 1.654 0 .977.71 1.916.81 2.049.098.133 1.394 2.132 3.383 2.992.47.205.84.326 1.129.418.475.152.904.129 1.246.08.38-.058 1.171-.48 1.338-.943.164-.464.164-.86.114-.943-.049-.084-.182-.133-.38-.232z" />
+                                </svg>
+                            </a>
+                            <!-- Fix URL -->
+                            <a
+                                href="tg://share?url=www.example.com?t=12&text=🎬🍿🎥Can you guess the title of 12 famous movies?">
+
+                                <svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" fill="#F8FFE5"
+                                    class="bi bi-telegram" viewBox="0 0 16 16">
                                     <path
-                                        d="M69.854 12.22c3.721-2.325 4.348-6.603 7.402-9.481 1.046 3.027 3.443 9.07 6.125 11.113" />
-                                </g>
-                            </svg>
+                                        d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM8.287 5.906c-.778.324-2.334.994-4.666 2.01-.378.15-.577.298-.595.442-.03.243.275.339.69.47l.175.055c.408.133.958.288 1.243.294.26.006.549-.1.868-.32 2.179-1.471 3.304-2.214 3.374-2.23.05-.012.12-.026.166.016.047.041.042.12.037.141-.03.129-1.227 1.241-1.846 1.817-.193.18-.33.307-.358.336a8.154 8.154 0 0 1-.188.186c-.38.366-.664.64.015 1.088.327.216.589.393.85.571.284.194.568.387.936.629.093.06.183.125.27.187.331.236.63.448.997.414.214-.02.435-.22.547-.82.265-1.417.786-4.486.906-5.751a1.426 1.426 0 0 0-.013-.315.337.337 0 0 0-.114-.217.526.526 0 0 0-.31-.093c-.3.005-.763.166-2.984 1.09z" />
+                                </svg>
+                            </a>
 
                         </div>
                     </div>
-                    <div class="col-md-1">
-                    </div>
                 </div>
 
-                <!-- Feedback -->
-                <div class="row">
-                    <div class="col-md-4">
-                    </div>
-                    <div class="col-md-4">
-                        <div id="feedback-info">
-                            <div id='feedback'>Oops, try again!</div>
-                        </div>
-                    </div>
-                    <div class="col-md-4">
-                    </div>
-                </div>
-
-
-                <!-- Input -->
-                <div class="row">
-                    <div class="col-md-1">
-                    </div>
-                    <div class="col-md-10">
-                        <div id="question">
-
-                            <form id="answer-input">
-                                <input autocomplete="off" id="submit-text" onkeydown="return event.key != 'Enter';"
-                                    type="text" placeholder="E.g. Titanic" class="btn btn-secondary"><br>
-                                <input id="submit-button" type="button" value="Submit">
-                            </form>
-
-                        </div>
-                    </div>
-                    <div class="col-md-1">
-                    </div>
-                </div>
-
-
-                <!-- Start button -->
-                <div class="row">
-                    <div class="col-md-1">
-                    </div>
-                    <div class="col-md-10">
-                        <button id="start-button" class="custom-btn btn-14"><span>Start</span></button>
-                    </div>
-                    <div class="col-md-1">
-                    </div>
-                </div>
             </div>
 
         </div>
@@ -195,7 +137,6 @@
 <script src="https://npmcdn.com/tether@1.2.4/dist/js/tether.min.js"></script>
 
 <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js'></script>
-<!-- <script src='https://cdnjs.cloudflare.com/ajax/libs/lettering.js/0.6.1/jquery.lettering.min.js'></script> -->
 
 <!-- Bootstrap -->
 <!-- <script src="js/jquery.min.js"></script> -->
@@ -203,7 +144,5 @@
 <script src="js/scripts.js"></script>
 
 
-<!-- Three JS -->
-<script type="module" src="js/main.js"></script>
 
 </html>
