--- a/index.html
+++ b/index.html
@@ -135,7 +135,8 @@
                         <div id="question">
 
                             <form id="answer-input">
-                                <input autocomplete="off" id="submit-text" onkeydown="return event.key != 'Enter';"
+                                <input autocomplete="off" id="submit-text" onkeydown="if (event.keyCode == 13)
+                                {document.getElementById('submit-button').click(); return false;}"
                                     type="text" placeholder="E.g. Titanic" class="btn btn-secondary"><br>
                                 <input id="submit-button" type="button" value="Submit">
                             </form>
