ASCII Gandalf sentence

--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
                            <!-- ,---.
                           /    |
                          /     |
- You shall not pass!    /      |
-                       /       |
-          \       ___,'        |
-                <  -'          :
+ I suppose you          /      |
+think that was         /       |
+ terribly clever  ___,'        |
+          \      <  -'          :
                  `-.__..--'``-,_\_
                     |o/ <o>` :,.)_`>
                     :/ `     ||/)
