--- a/congrats.html
+++ b/congrats.html
@@ -25,6 +25,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="3D Movie Quiz by Enric Moreu. Guess the title of 12 famous movies">
+  <meta name="keywords" content="quiz, movie, 3d">
+  <meta name="author" content="Enric Moreu">
     <meta name="theme-color" content="#323238">
     <link rel="icon"
         href="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/240/apple/285/movie-camera_1f3a5.png" />
@@ -35,10 +38,7 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/main.css" rel="stylesheet">
 
-
-
-
-    <title>Netflix 3D Quiz</title>
+    <title>3D Movie Quiz by Enric Moreu</title>
 </head>
 
 <body>
