--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@ think that was         /       |
         rel="stylesheet" rel="stylesheet">
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/main.css" rel="stylesheet">
+    <script async src="https://api.countapi.xyz/hit/moviequiz-hii.enricmor.eu/visits"></script>
+
 
     <title>3D Movie Quiz by Enric Moreu</title>
 </head>
