--- a/congrats.html
+++ b/congrats.html
@@ -37,6 +37,7 @@
         rel="stylesheet" rel="stylesheet">
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/main.css" rel="stylesheet">
+    <script async src="https://api.countapi.xyz/hit/moviequiz-all.enricmor.eu/visits"></script>
 
     <title>3D Movie Quiz by Enric Moreu</title>
 </head>
