--- a/congrats.html
+++ b/congrats.html
@@ -73,7 +73,7 @@
                         <div class="share">
                             <!--  -->
                             <a
-                                href="whatsapp://send?text=🎬🍿🎥Can you guess the title of 12 famous movies? https://3dfilms.enricmor.eu">
+                                href="whatsapp://send?text=🎬🍿🎥Can you guess the title of 12 famous movies? https://moviequiz.enricmor.eu">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" fill="#F8FFE5"
                                     class="bi bi-whatsapp" viewBox="0 0 16 16">
                                     <path
@@ -82,7 +82,7 @@
                             </a>
                             <!-- Fix URL -->
                             <a
-                                href="tg://share?url=www.example.com?t=12&text=🎬🍿🎥Can you guess the title of 12 famous movies?">
+                                href="tg://share?url=https://moviequiz.enricmor.eu?t=12&text=🎬🍿🎥Can you guess the title of 12 famous movies?">
 
                                 <svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" fill="#F8FFE5"
                                     class="bi bi-telegram" viewBox="0 0 16 16">
