--- a/congrats.html
+++ b/congrats.html
@@ -61,7 +61,7 @@
                     <div class="col-md-12">
                         <div id="subtitle">
                             <h3>Did you enjoy it?</h3>
-                            <h4>Share it with your firends!</h4>
+                            <h4>Share it with your friends!</h4>
                         </div>
                     </div>
                 </div>
