--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ think that was         /       |
     <div id='spinner'>
         <div class="loader"></div>
     </div>
-    
+
     <div id="wrap">
         <div id="main" class="container clear-top">
             <!-- Title -->
@@ -143,13 +143,23 @@ think that was         /       |
                         <div id="question">
 
                             <form id="answer-input">
-                                <input autocomplete="off" id="submit-text" onkeydown="if (event.keyCode == 13)
-                                {document.getElementById('submit-button').click(); return false;}" type="text"
-                                    placeholder="E.g. Titanic" class="btn btn-secondary">
+                                <div class="input-group mb-3">
+                                    <input autocomplete="off" id="submit-text" onkeydown="if (event.keyCode == 13)
+                                    {document.getElementById('submit-button').click(); return false;}" type="text"
+                                            placeholder="E.g. Titanic" class="form-control btn btn-secondary">
 
-                                <!-- <svg style="margin-top: 5px;" xmlns="http://www.w3.org/2000/svg" width="25" height="30" fill="#F8FFE5" class="bi bi-question-circle-fill" viewBox="0 0 16 16">
-                                    <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM5.496 6.033h.825c.138 0 .248-.113.266-.25.09-.656.54-1.134 1.342-1.134.686 0 1.314.343 1.314 1.168 0 .635-.374.927-.965 1.371-.673.489-1.206 1.06-1.168 1.987l.003.217a.25.25 0 0 0 .25.246h.811a.25.25 0 0 0 .25-.25v-.105c0-.718.273-.927 1.01-1.486.609-.463 1.244-.977 1.244-2.056 0-1.511-1.276-2.241-2.673-2.241-1.267 0-2.655.59-2.75 2.286a.237.237 0 0 0 .241.247zm2.325 6.443c.61 0 1.029-.394 1.029-.927 0-.552-.42-.94-1.029-.94-.584 0-1.009.388-1.009.94 0 .533.425.927 1.01.927z"/>
-                                </svg> -->
+                                    <!-- <input autocomplete="off" id="submit-text" onkeydown="if (event.keyCode == 13)
+                                {document.getElementById('submit-button').click(); return false;}" type="text"
+                                        placeholder="E.g. Titanic" class="btn btn-secondary"> -->
+
+                                    <div class="input-group-append">
+                                        <button class="form-control btn btn-secondary" type="button">
+                                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-lightbulb" viewBox="0 0 16 16">
+                                                <path d="M2 6a6 6 0 1 1 10.174 4.31c-.203.196-.359.4-.453.619l-.762 1.769A.5.5 0 0 1 10.5 13a.5.5 0 0 1 0 1 .5.5 0 0 1 0 1l-.224.447a1 1 0 0 1-.894.553H6.618a1 1 0 0 1-.894-.553L5.5 15a.5.5 0 0 1 0-1 .5.5 0 0 1 0-1 .5.5 0 0 1-.46-.302l-.761-1.77a1.964 1.964 0 0 0-.453-.618A5.984 5.984 0 0 1 2 6zm6-5a5 5 0 0 0-3.479 8.592c.263.254.514.564.676.941L5.83 12h4.342l.632-1.467c.162-.377.413-.687.676-.941A5 5 0 0 0 8 1z"/>
+                                              </svg>
+                                        </button>
+                                    </div>
+                                </div>
 
                                 <input id="submit-button" type="button" value="Submit">
                             </form>
