--- a/index.html
+++ b/index.html
@@ -143,19 +143,15 @@ think that was         /       |
                         <div id="question">
 
                             <form id="answer-input">
-                                <div class="input-group mb-3">
+                                <div class="input-group submit-box">
                                     <input autocomplete="off" id="submit-text" onkeydown="if (event.keyCode == 13)
                                     {document.getElementById('submit-button').click(); return false;}" type="text"
                                             placeholder="E.g. Titanic" class="form-control btn btn-secondary">
-
-                                    <!-- <input autocomplete="off" id="submit-text" onkeydown="if (event.keyCode == 13)
-                                {document.getElementById('submit-button').click(); return false;}" type="text"
-                                        placeholder="E.g. Titanic" class="btn btn-secondary"> -->
-
                                     <div class="input-group-append">
-                                        <button class="form-control btn btn-secondary" type="button">
-                                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-lightbulb" viewBox="0 0 16 16">
-                                                <path d="M2 6a6 6 0 1 1 10.174 4.31c-.203.196-.359.4-.453.619l-.762 1.769A.5.5 0 0 1 10.5 13a.5.5 0 0 1 0 1 .5.5 0 0 1 0 1l-.224.447a1 1 0 0 1-.894.553H6.618a1 1 0 0 1-.894-.553L5.5 15a.5.5 0 0 1 0-1 .5.5 0 0 1 0-1 .5.5 0 0 1-.46-.302l-.761-1.77a1.964 1.964 0 0 0-.453-.618A5.984 5.984 0 0 1 2 6zm6-5a5 5 0 0 0-3.479 8.592c.263.254.514.564.676.941L5.83 12h4.342l.632-1.467c.162-.377.413-.687.676-.941A5 5 0 0 0 8 1z"/>
+                                        <button id="hint-tooltip" class="form-control btn btn-secondary" type="button" data-toggle="tooltip" data-placement="left" title="While shooting a jungle movie on the remote Skull Island, filmmaker Denham and his crew stumble upon a prehistoric world populated by dinosaurs and giant snakes. The most dangerous and magnificent of all the unusual and exotic creatures is...">
+                                            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="#F8FFE5" class="bi bi-question-square" viewBox="0 0 16 16">
+                                                <path d="M14 1a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1h12zM2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2z"/>
+                                                <path d="M5.255 5.786a.237.237 0 0 0 .241.247h.825c.138 0 .248-.113.266-.25.09-.656.54-1.134 1.342-1.134.686 0 1.314.343 1.314 1.168 0 .635-.374.927-.965 1.371-.673.489-1.206 1.06-1.168 1.987l.003.217a.25.25 0 0 0 .25.246h.811a.25.25 0 0 0 .25-.25v-.105c0-.718.273-.927 1.01-1.486.609-.463 1.244-.977 1.244-2.056 0-1.511-1.276-2.241-2.673-2.241-1.267 0-2.655.59-2.75 2.286zm1.557 5.763c0 .533.425.927 1.01.927.609 0 1.028-.394 1.028-.927 0-.552-.42-.94-1.029-.94-.584 0-1.009.388-1.009.94z"/>
                                               </svg>
                                         </button>
                                     </div>
@@ -221,6 +217,12 @@ think that was         /       |
 <!-- <script src="js/jquery.min.js"></script> -->
 <script src="js/bootstrap.min.js"></script>
 <script src="js/scripts.js"></script>
+
+<script>
+    $(function () {
+  $('[data-toggle="tooltip"]').tooltip()
+})
+</script>
 
 
 <!-- Three JS -->
