--- a/index.html
+++ b/index.html
@@ -164,6 +164,7 @@ think that was         /       |
 
                                 <input id="submit-button" type="button" value="Submit">
                             </form>
+                            <a id="nextquestion" href="#">Skip movie</a>
 
                         </div>
                     </div>
