--- a/congrats.html
+++ b/congrats.html
@@ -60,7 +60,8 @@
                 <div class="row">
                     <div class="col-md-12">
                         <div id="subtitle">
-                            <h3>Did you enjoy it?</h3>
+                            <h3>You guessed:</h3>
+                            <h3 id="guessed">12/12</h3>
                             <h4>Share it with your friends!</h4>
                         </div>
                     </div>
@@ -133,6 +134,10 @@
 <script src="js/bootstrap.min.js"></script>
 <script src="js/scripts.js"></script>
 
-
+<script>
+    var url = new URL(window.location.href);
+    var c = url.searchParams.get("g");
+    document.getElementById("guessed").innerHTML = c.toString() + '/12';
+</script>
 
 </html>
